# BedrockLang

./: .gitignore  pom.xml  readme.md
.github/: release-info.json
.github/scripts/: zip.sh
.github/workflows/: mavenBuild.yml
BDLCompiler/: pom.xml  readme.md
BDLCompiler/src/main/antlr/: BedrockLang.g4
BDLCompiler/src/main/java/com/blocklynukkit/bedrockLang/compiler/app/: Compiler.java  Evaluator.java  Launcher.java  LauncherClassLoader.java
BDLCompiler/src/main/java/com/blocklynukkit/bedrockLang/compiler/parser/: BedrockLang.interp  BedrockLang.tokens  BedrockLangASTBuilder.java  BedrockLangBaseListener.java  BedrockLangBaseVisitor.java  BedrockLangLexer.interp  BedrockLangLexer.java  BedrockLangLexer.tokens  BedrockLangListener.java  BedrockLangParser.java  BedrockLangVisitor.java  VisitResult.java
BDLCompiler/src/test/java/com/blocklynukkit/bedrockLang/test/: BlockTest.java  CallTest.java  FieldTest.java  GetArrayEleTest.java  IfElseTest.java  InvokeTest.java  LearnByteCode.java  LoopTest.java  TestUtils.java  UnitTest.java  VariableTest.java
BDLCompiler/src/test/java/com/blocklynukkit/bedrockLang/test/compiler/: CompilerSimpleTest.java  (+1 more)
BDLCompiler/src/test/resources/: arrayCmd.bdl  bigNum.bdl  chainSetVar.bdl  fibonacci.bdl  helloWorld.bdl  ifWithIf.bdl  importArrays.bdl  mainArgsLength.bdl  manyFunction.bdl  newObject.bdl  printArgs.bdl  say.bdl  writeArray.bdl
BDLCompiler/src/test/resources/swing/: simpleWindow.bdl
BDLauncher/: Cargo.toml  pom.xml
BDLauncher/src/: main.rs
docs/release/beta/: 0.0.1.md  0.0.2.md  0.0.3.md
(+128 files in other folders)
