[package]
name = "bdlauncher"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.12"
subprocess = "0.2.8"
path-absolutize = "3.0.11"
tinyget = { version = "1.0", features = ["https"] }
zip = "0.5"

[[bin]]
name = "bdl"
path = "src/main.rs"

[profile.release]
lto = "fat"
panic = "abort"